# audio-deepfake-detection-uwr

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: best_clusters.ipynb  c4.ipynb  c6.ipynb  c7.ipynb  test_models.ipynb
notebooks/colab/: c1.ipynb  c2.ipynb  c3.ipynb  c4.ipynb  c5_setup_colab.ipynb  c6.ipynb  colab_base_template.ipynb
notebooks/experiments/: best_balance_pipeline.ipynb  colab_base_template.ipynb  domain_shift.ipynb  fft_vs_wavlm.ipynb
notebooks/important_data/: best_balance_results_equal_ratio_f1_score_fft_base_model.csv  best_clusters.ipynb
notebooks/playground/: test.ipynb  test_artifact.ipynb
notebooks/research/: check_fish_speach.ipynb
scripts/: get_device_info.py
scripts/experiments/: run_domain_shift.py  run_fft_vs_wavlm.py  run_final_fft_vs_wavlm.py  run_pick_best_balance.py  run_raw_data.py
scripts/preprocessing/: run_full_preprocessing_pipeline.py  run_full_preprocessing_pipeline_fft.py  run_set_audio_ids_pipeline.py
src/common/: basic_functions.py  constants.py  experiment_configs.py  format.py  logger.py  record_iterator.py  utils.py  wandb_config.py
src/datasets/: audio_dataset.py
src/evaluation/: binary_evaluator.py
src/models/: artifact_manager.py  base_model.py  data_loader.py  fft_baseline_classifier.py  logistic_regression_classifier.py  logistic_regression_clf.py  mlp_classifier.py  model_trainer.py  objectives.py  torch_data_loader.py  torch_model.py  xgboost_classifier.py
src/pipelines/: best_balance_pipeline.py  map_clusters_ids_pipeline.py  (+4 more)
tests/: artifact_manager_test.py  audio_dataset_test.py  audio_segmentation_test.py  base_IO_test.py  base_experiment_pipeline_test.py  base_model_test.py  base_test.py  best_balance_pipeline_test.py  binary_evaluator_test.py  collector_test.py  config_loader_test.py  data_loader_test.py  dataset_balancer_test.py  dataset_spliter_test.py  embedding_cluster_mapper_test.py  emedding_cluster_mapper_test.py  experiment_preprocessor_test.py  feature_loader_test.py  fft_baseline_classifier_test.py  fft_extractor_test.py  get_device_info.py  get_gpu_name_test.py  logistic_regression_classifier_test.py  logistic_regression_clf_test.py  logistic_trainner_test.py  map_clusters_ids_pipeline_test.py  metadata_modifier_test.py  mix_balancer_test.py  mlp_classifier_test.py  model_trainer_test.py  objectives_test.py  oversample_real_balancer_test.py  record_iterator_test.py  torch_model_test.py  undersample_spoof_balancer_test.py  unique_audio_id_mapper_test.py  wavlm_extractor_test.py  xgboost_classifier_test.py
(+65 files in other folders)
