[project]
name = "audio-deepfake-detection-uwr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets<4.0.0",
    "hdbscan>=0.8.41",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "protobuf>=6.33.2",
    "scikit-learn>=1.7.2",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.1",
    "transformers>=4.57.3",
    "umap-learn>=0.5.11",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = ["flake8", "isort>=6.0.1", "pytest>=8.4.1", "autopep8", "black", "autoflake"]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x; sys_platform != 'darwin'",  # darwin = macOS
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "tests"]

[project.scripts]
format_project = "src.common.format:format"
